--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-# idyll-embed
-Embed Idyll directly in an HTML page
-
-## Usage
-
-```html
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -17,24 +11,22 @@ Embed Idyll directly in an HTML page
       document.body.appendChild(div);
 
       // Get your markup.
-      var idyllMarkup = '# Hello World';
+      var idyllMarkup = `
+      # Hello World
+
+      [div style:\`{width: '100%', background: '#ddd', height: 300}\` /]
+
+      `;
 
       // This will make all standard components available by default.
       // To add additional components, register them.
-      Idyll.registerComponent('ComponentName', Component);
+      // Idyll.registerComponent('ComponentName', Component);
 
       // Instantiate the Idyll runtime.
-      Idyll.render(idyllMarkup, div);
+      Idyll.render(idyllMarkup, div, {
+        theme: 'none',
+        layout: 'none'
+      });
     </script>
   </body>
 </html>
-```
-
-## How to modify this library for your own needs
-
-1. Clone this repo
-2. Run `npm install` to install the dependencies.
-3. Edit `index.js` according to your own use-case. See the comments in `index.js` for more info.
-4. Rebuild the dist file: `npm run build`
-5. Include the newly created JavaScript file (`dist/idyll-embed.min.js`) in your HTML.
-
